--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "release": "rimraf lib/* && npm run prettier && npm run lint && npm run build",
     "build": "rollup -c",
     "watch": "npm run build -- --watch",
-    "lint": "eslint 'src/**/*.ts' --fix",
-    "prettier": "prettier --write 'src/**/*.ts'"
+    "lint": "eslint 'src/**/*.{tsx,ts}' --fix",
+    "prettier": "prettier --write 'src/**/*.{tsx,ts}'"
   },
   "repository": {
     "type": "git",
@@ -32,9 +32,9 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@types/react": "^16.9.17",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-prettier": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
@@ -50,7 +50,7 @@
     "react": ">=16.8.0"
   },
   "lint-staged": {
-    "src/**/*.{ts}": [
+    "src/**/*.{tsx,ts}": [
       "npm run prettier",
       "npm run lint",
       "git add"
