--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,9 @@
 language: node_js
 
-node_js:
-  - "10"
+node_js: node
 
 cache:
   directories:
     - node_modules
 
-script:
-  - yarn install
-  - yarn docz:build
-
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  local_dir: .docz/dist
-  on:
-    branch: master
+script: yarn
