--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-provide-providers",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "Solve \"wrapper hell\" problem in React project",
   "author": "Jakub Biesiada",
   "license": "MIT",
