--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "release": "rimraf lib/* && npm run prettier && npm run lint && npm run build",
     "build": "rollup -c",
+    "test": "jest --coverage",
     "watch": "npm run build -- --watch",
+    "watch:test": "npm run test -- --watch",
     "lint": "eslint 'src/**/*.{tsx,ts}' --fix",
     "prettier": "prettier --write 'src/**/*.{tsx,ts}'"
   },
@@ -31,23 +33,40 @@
   "homepage": "https://github.com/JB1905/react-provide-providers#readme",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@types/react": "^16.9.23",
-    "@typescript-eslint/parser": "^2.22.0",
+    "@testing-library/react": "^10.0.1",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jest": "^25.1.4",
+    "@types/react": "^16.9.25",
+    "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.3",
+    "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
-    "react": "^16.13.0",
-    "rollup-plugin-terser": "^5.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.26.0",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "src/**/*.{tsx,ts}": [
