--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-provide-providers",
-  "version": "1.1.1",
+  "version": "1.1.2-beta.1",
   "description": "Solve \"wrapper hell\" problem in React project",
   "author": "Jakub Biesiada",
   "license": "MIT",
@@ -37,16 +37,16 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.25",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "lint-staged": "^10.0.8",
-    "prettier": "^2.0.1",
+    "lint-staged": "^10.0.9",
+    "prettier": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.1",
