--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/JB1905/react-provide-providers#readme",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^8.1.0",
-    "@testing-library/react": "^10.4.1",
+    "@testing-library/react": "^10.4.3",
     "@testing-library/react-hooks": "^3.3.0",
     "@types/jest": "^26.0.3",
     "@types/react": "^16.9.41",
@@ -61,7 +61,8 @@
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
-    }
+    },
+    "modulePathIgnorePatterns": ["__tests__/__utils__"]
   },
   "husky": {
     "hooks": {
