--- a/package.json
+++ b/package.json
@@ -8,41 +8,47 @@
   "module": "lib/react-provide-providers.esm.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "release": "rimraf lib/* && npm run prettier && npm run lint && npm run build",
+    "prepack": "npm run clean && npm run prettier && npm run lint && npm run build",
+    "clean": "rimraf lib/*",
     "build": "rollup -c",
     "test": "jest --coverage",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch",
     "lint": "eslint 'src/**/*.{tsx,ts}' --fix",
-    "prettier": "prettier --write 'src/**/*.{tsx,ts}'"
+    "prettier": "prettier --write 'src/**/*.{tsx,ts}'",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JB1905/react-provide-providers.git"
+    "url": "https://github.com/cool-hooks/react-provide-providers.git"
   },
   "keywords": [
+    "react",
     "provider",
+    "library",
+    "organizer",
     "state",
-    "hooks",
-    "React",
-    "library"
+    "management",
+    "hooks"
   ],
   "bugs": {
-    "url": "https://github.com/JB1905/react-provide-providers/issues"
+    "url": "https://github.com/cool-hooks/react-provide-providers/issues"
   },
-  "homepage": "https://github.com/JB1905/react-provide-providers#readme",
+  "homepage": "https://github.com/cool-hooks/react-provide-providers#readme",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^8.1.0",
-    "@testing-library/react": "^10.4.3",
+    "@testing-library/react": "^10.4.5",
     "@testing-library/react-hooks": "^3.3.0",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.4",
     "@types/react": "^16.9.41",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
+    "@typescript-eslint/parser": "^3.6.0",
+    "cz-conventional-changelog": "3.2.0",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.6",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
@@ -53,16 +59,24 @@
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "ts-jest": "^26.1.1",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6",
+    "semantic-release": "^17.1.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "modulePathIgnorePatterns": ["__tests__/utils"]
+    "modulePathIgnorePatterns": [
+      "__tests__/utils"
+    ]
   },
   "husky": {
     "hooks": {
